--- a/package.json
+++ b/package.json
@@ -10,13 +10,15 @@
     "@okta/okta-signin-widget": "^4.1.2",
     "antd": "^4.4.3",
     "axios": "^0.19.2",
+    "bootstrap": "^4.5.3",
     "craco-less": "^1.17.0",
     "plotly.js": "^1.54.6",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-plotly.js": "^2.4.0",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.1"
+    "react-scripts": "3.4.1",
+    "reactstrap": "^8.7.1"
   },
   "scripts": {
     "start": "craco --max_old_space_size=4096 start",
