--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@craco/craco": "^5.6.4",
     "@okta/okta-react": "^3.0.2",
     "@okta/okta-signin-widget": "^4.1.2",
+    "@react-google-maps/api": "^2.0.2",
     "antd": "^4.4.3",
     "axios": "^0.19.2",
     "bootstrap": "^4.5.3",
